<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/timestampLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="60dp"
            android:text="@string/timestamp" />

        <TextView
            android:id="@+id/latitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/timestampLabel"
            android:layout_below="@+id/timestampLabel"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/longitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/latitudeLabel"
            android:layout_below="@+id/latitudeLabel"
            android:text="@string/longitude" />

        <TextView
            android:id="@+id/batteryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/longitudeLabel"
            android:layout_below="@+id/longitudeLabel"
            android:text="@string/battery" />

        <TextView
            android:id="@+id/voltageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/batteryLabel"
            android:layout_below="@+id/batteryLabel"
            android:text="@string/voltage" />

        <TextView
            android:id="@+id/temperatureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/voltageLabel"
            android:layout_below="@+id/voltageLabel"
            android:text="@string/temperature" />

        <TextView
            android:id="@+id/minfoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/temperatureLabel"
            android:layout_below="@+id/temperatureLabel"
            android:text="@string/minfo" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/timestampLabel"
            android:layout_marginLeft="60dp"
            android:layout_toRightOf="@+id/voltageLabel"
            android:text="00/00/0000 00:00:00" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/timestamp"
            android:layout_alignTop="@+id/latitudeLabel"
            android:text="00.0000000" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/latitude"
            android:layout_alignTop="@+id/longitudeLabel"
            android:text="00.0000000" />

        <TextView
            android:id="@+id/battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/voltageLabel"
            android:layout_alignLeft="@+id/longitude"
            android:text="00/00" />

        <TextView
            android:id="@+id/voltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/battery"
            android:layout_alignTop="@+id/voltageLabel"
            android:text="0000 mV" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/voltage"
            android:layout_alignTop="@+id/temperatureLabel"
            android:text="00 °C" />

        <TextView
            android:id="@+id/minfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/temperature"
            android:layout_alignTop="@+id/minfoLabel"
            android:text="SampleManetRoutingInfo Honk honk Blargh" />

    </RelativeLayout>

</LinearLayout>